# AiAndroidBuddy

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: mnn_bridge.cpp
app/src/main/kotlin/com/pocketpet/: PocketPetApp.kt
app/src/main/kotlin/com/pocketpet/core/ai/: AndroidSpeechEngine.kt  AndroidTtsEngine.kt  AsrEngine.kt  DeviceCapabilityChecker.kt  IntentRecognizer.kt  KokoraTtsEngine.kt  LlmEngine.kt  LlmPromptBuilder.kt  MnnLlmEngine.kt  ModelConfig.kt  ModelDownloadWorker.kt  TtsEngine.kt  WhisperAsrEngine.kt
app/src/main/kotlin/com/pocketpet/core/notifications/: NotificationAction.kt  NotificationDao.kt  NotificationDatabase.kt  NotificationItem.kt  NotificationRepository.kt
app/src/main/kotlin/com/pocketpet/core/nudge/: NudgeMessage.kt  NudgeScheduler.kt  NudgeWorker.kt
app/src/main/kotlin/com/pocketpet/di/: AiModule.kt  AppModule.kt
app/src/main/kotlin/com/pocketpet/overlay/: PetOverlayService.kt  PetSurfaceView.kt  SpeechBubbleView.kt
app/src/main/kotlin/com/pocketpet/receivers/: BootReceiver.kt
app/src/main/kotlin/com/pocketpet/services/: PetAccessibilityService.kt  PetBrainService.kt  PetNotificationService.kt  QuickSummaryTileService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_pet_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/kotlin/com/pocketpet/services/: QuickSummaryTileTest.kt
(+24 files in other folders)
